@@ -20,32 +20,21 @@
             <artifactId>javafx-fxml</artifactId>
             <version>13</version>
         </dependency>
-        <dependency>
-            <groupId>com.google.firebase</groupId>
-            <artifactId>firebase-admin</artifactId>
-            <version>9.2.0</version>
-        </dependency>
-        <dependency>
-            <groupId>com.google.cloud</groupId>
-            <artifactId>google-cloud-storage</artifactId>
-            <version>2.22.4</version>
-        </dependency>
     </dependencies>
     <build>
-        <plugins>            <plugin>
+        <plugins>
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.11.0</version>
+                <version>3.8.0</version>
                 <configuration>
                     <release>11</release>
-                    <source>11</source>
-                    <target>11</target>
-                    <encoding>UTF-8</encoding>
                 </configuration>
-            </plugin>            <plugin>
+            </plugin>
+            <plugin>
                 <groupId>org.openjfx</groupId>
                 <artifactId>javafx-maven-plugin</artifactId>
-                <version>0.0.8</version>
+                <version>0.0.6</version>
                 <executions>
                     <execution>
                         <!-- Default configuration for running -->
@@ -53,13 +42,9 @@
                         <id>default-cli</id>
                         <configuration>
                             <mainClass>com.bytebender.premnoybiye.App</mainClass>
-                            <commandlineArgs>--enable-preview</commandlineArgs>
                         </configuration>
                     </execution>
                 </executions>
-                <configuration>
-                    <mainClass>com.bytebender.premnoybiye.App</mainClass>
-                </configuration>
             </plugin>
         </plugins>
     </build>
